syntax = "proto3";

package multimedia;

option go_package = "./proto";

// Search request message
message SearchRequest {
  string query = 1;
}

// Playlist request message
message PlaylistRequest {
    string userId = 1;
    enum Operation {
      ADD = 0;
      REMOVE = 1;
      GET = 2;
    }
    Operation operation = 2;
    ContentResponse content = 3;
  }

// Content response message
message ContentResponse {
  string id = 1;
  string title = 2;
  string genre = 3;
  string creator = 4; // Artist or Director
  string url = 5; // URL for content simulation
}

// Search response message
message SearchResponse {
  repeated ContentResponse contents = 1;
}

// Playlist response message
message PlaylistResponse {
  repeated ContentResponse contents = 1;
}

// gRPC service
service MultimediaService {
  // Content search
  rpc SearchContent (SearchRequest) returns (SearchResponse);

  // Content streaming
  rpc StreamContent (ContentResponse) returns (stream ContentResponse);

  // Playlist management
  rpc ManagePlaylist (stream PlaylistRequest) returns (stream PlaylistResponse);
}
